--- a/src/components/login/LoginPanel.css
+++ b/src/components/login/LoginPanel.css
@@ -1,3 +1,7 @@
+html {
+    background-color: #95a5a9;
+    background-image: url("../../components/img/background.png");
+}
 .login-wrapper {
     display: grid;
     grid-template-areas: "email" "password";
@@ -6,7 +10,7 @@
     font-family: 'Montserrat', sans-serif;
 }
 .background-wrapper {
-    background-color: #869499;
+    background-color: #334756;
     border-radius: 10px;
     padding: 20px;
     scale: 130%;
@@ -23,7 +27,7 @@
     padding-bottom: 2%;
 }
 .login-button-wrapper {
-    background-color: #334756;
+    background-color: #3f5955;
     border-radius: 10px;
     width: 17rem;
     border: solid 1px transparent;
@@ -42,7 +46,7 @@
     cursor: pointer;
 }
 .register-link:visited {
-    color: #282c34;
+    color: #fff;
 }
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
