--- a/src/components/User/MainUserPanel.css
+++ b/src/components/User/MainUserPanel.css
@@ -4,7 +4,7 @@
 }
 .site-wrapper {
     display: grid;
-    background-color: #869499;
+    background-color: #BFAFA6;
     grid-template-areas: "main" "footer";
     height: 100vh;
 }
@@ -31,6 +31,7 @@
     height: 40px;
 }
 .logout-button {
+    font-family: 'Montserrat', sans-serif;
     margin: 4px 15px 0 0;
     float: right;
     border-radius: 5px;
@@ -40,22 +41,27 @@
     text-decoration: none;
     background-color: #334441;
     font-weight: 400;
-    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
     width: 14vh;
-    height: 4vh;
+    height: 35px;
     cursor: pointer;
-
+}
+.logout-button:hover {
+    background-color: #606D5D;
 }
 .footer {
     grid-area: footer;
-    background-color: #869499;
+    background-color: #BFAFA6;
     width: 100%;
     text-align: center;
+    color: rgba(0,0,0,0.65);
+}
+.footer h1{
     font-family: 'Montserrat', sans-serif;
-    font-weight: 100;
-    font-size: 12px;
-    color: #373c46;
-    font-style: italic;
+    font-weight: 500;
+    font-size: 18px;
+    font-style: normal;
+    color: #282c34;
 }
 .logo-at-left-side {
     display: flex;
@@ -71,14 +77,15 @@
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     font-size: 30px;
-    margin-top: 20px;
+    margin-top: 30px;
+    color: rgba(0,0,0,0.65);
 }
 .main-content {
     display: flex;
     align-items: center;
 }
 .P {
-    padding-top: 30px;
+    padding-top: 40px;
     width: 100%;
     height: 100%;
     margin-top: -100px;
@@ -98,17 +105,17 @@
     font-size: 22px;
     text-align: center;
     border: none;
-    color: #fff;
+    color: rgba(255,255,255,0.7);
     text-decoration: none;
     display: inline-block;
-    background-color: #282c34;
+    background-color: #334441;
     scale: 1.2;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     cursor: pointer;
 }
 .Odbior:hover {
-    background-color: #334441;
+    background-color: #606D5D;
 }
 .top-button-content .Nadanie{
     border-radius: 8px;
@@ -116,17 +123,17 @@
     font-size: 22px;
     text-align: center;
     border: none;
-    color: #fff;
+    color: rgba(255,255,255,0.7);
     text-decoration: none;
     display: inline-block;
-    background-color: #282c34;
+    background-color: #334441;
     scale: 1.2;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
     cursor: pointer;
 }
 .Nadanie:hover {
-    background-color: #334441;
+    background-color: #606D5D;
 }
 .bottom-info-content{
     grid-area: package-list;
