Minor changes on request from database person

--- a/src/components/getData/sendData.css
+++ b/src/components/getData/sendData.css
@@ -134,3 +134,9 @@
 .choose-size {
     margin: 10px 0;
 }
+.locker option {
+    background-color: #BFAFA6;
+}
+.locker option:hover {
+    background-color: #BFAFA6;
+}
