--- a/src/components/getData/sendData.css
+++ b/src/components/getData/sendData.css
@@ -47,7 +47,7 @@
 .sender-field-form {
     display: flex;
     justify-content: space-between;
-    padding: 25px 0 20px 0;
+    padding: 20px 0 20px 0;
 }
 .reciever-field-form{
     display: flex;
@@ -57,7 +57,7 @@
 .choose-locker {
     display: flex;
     justify-content: space-between;
-    padding: 20px 0;
+    padding-top: 20px;
 }
 .form-text {
     font-family: 'Montserrat', sans-serif;
@@ -113,18 +113,27 @@
     display: grid;
     text-align: center;
     background-color: rgba(255,255,255,0.15);
-    margin: 10px;
+    margin: 20px 0;
     border-radius: 8px;
-    padding: 0 10px;
+    padding: 0 25px;
+}
+.form-card h4 {
+    text-align: center;
+    color: rgba(0,0,0,0.75);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    margin-top: 6px;
 }
 .form-card h6 {
+    color: rgba(0,0,0,0.75);
     font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
-    margin: 3px 0;
+    font-weight: 400;
+    font-size: 15px;
+    margin: 2px 0;
 }
 .img-container {
-    width: 70px;
-    height: 70px;
+    width: 80px;
+    height: 80px;
     padding-left: 5px;
     margin: 10px;
 }
@@ -132,11 +141,65 @@
     width: 100%;
 }
 .choose-size {
-    margin: 10px 0;
+    cursor: pointer;
+    box-sizing: border-box;
+    appearance: none;
+    background: rgba(255,255,255,0.3);
+    outline: 2px solid #6E6A6F;
+    border-radius: 5px;
+    border: none;
+    width: 50px;
+    height: 50px;
+    scale: 0.5;
+    margin: 0 auto;
+}
+.choose-size:checked {
+    background-image : url('../img/check.png');
 }
 .locker option {
     background-color: #BFAFA6;
 }
 .locker option:hover {
     background-color: #BFAFA6;
+}
+.form-card-inactive {
+    display: grid;
+    text-align: center;
+    background-color: rgba(128,128,128,0.4);
+    margin: 20px 0;
+    border-radius: 8px;
+    padding: 0 18px;
+}
+.form-card-inactive h4 {
+    text-align: center;
+    color: rgba(255,255,255,0.6);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    margin-top: 6px;
+}
+.form-card-inactive h6 {
+    color: rgba(255,255,255,0.6);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    margin: 2px 0;
+}
+.form-card-inactive h5 {
+    color: rgba(255,255,255,0.6);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 11px;
+    margin: 2px 0;
+}
+.image_container_send {
+    width: 115px;
+    height: 70px;
+    padding-left: 5px;
+}
+.image_container_send img {
+    width: 100%;
+}
+.wrapper-list-send{
+    display: flex;
+    margin-left: 165px;
 }
