--- a/src/components/login/LoginPanel.css
+++ b/src/components/login/LoginPanel.css
@@ -6,7 +6,7 @@ html {
     display: grid;
     grid-template-areas: "email" "password";
     justify-content: center;
-    margin: 13% 5% 5%;
+    margin: 11% 5% 5%;
     font-family: 'Montserrat', sans-serif;
 }
 .background-wrapper {
@@ -16,7 +16,13 @@ html {
     scale: 130%;
     margin-top: -40px;
 }
-.email-wrapper {
+.required-items {
+    display: grid;
+    grid-area: email;
+    padding-bottom: 2%;
+    padding-top: 2%;
+}
+.adress-items {
     display: grid;
     grid-area: email;
     padding-bottom: 2%;
@@ -27,10 +33,18 @@ html {
     grid-area: password;
     padding-bottom: 2%;
 }
+.required-items span::after {
+    content: "*";
+    color: darkred;
+}
+.password-wrapper span::after {
+    content: "*";
+    color: darkred;
+}
 .login-button-wrapper {
     background-color: #606D5D;
     border-radius: 10px;
-    width: 17rem;
+    width: 27rem;
     border: solid 1px transparent;
     padding: 5px;
     text-decoration: none;
@@ -55,4 +69,11 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active{
     -webkit-box-shadow: 0 0 0 30px rgba(255,255,255,0.75) inset !important;
+}
+.register-layout-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+.required-items-wrapper {
+    margin-right: 30px;
 }
