--- a/src/components/login/LoginPanel.css
+++ b/src/components/login/LoginPanel.css
@@ -6,6 +6,13 @@ html {
     display: grid;
     grid-template-areas: "email" "password";
     justify-content: center;
+    margin: 15% 5% 5%;
+    font-family: 'Montserrat', sans-serif;
+}
+.register-wrapper {
+    display: grid;
+    grid-template-areas: "email" "password";
+    justify-content: center;
     margin: 11% 5% 5%;
     font-family: 'Montserrat', sans-serif;
 }
@@ -41,10 +48,25 @@ html {
     content: "*";
     color: darkred;
 }
-.login-button-wrapper {
+.register-button-wrapper {
     background-color: #606D5D;
     border-radius: 10px;
     width: 27rem;
+    border: solid 1px transparent;
+    padding: 5px;
+    text-decoration: none;
+    font-size: 1.1rem;
+    color: white;
+    cursor: pointer;
+    font-weight: 300;
+    transition: all 0.4s ease-in-out;
+    margin: 8px 0 8px 0;
+    font-family: 'Montserrat', sans-serif;
+}
+.login-button-wrapper {
+    background-color: #606D5D;
+    border-radius: 10px;
+    width: 14rem;
     border: solid 1px transparent;
     padding: 5px;
     text-decoration: none;
