--- a/src/components/getData/Card.css
+++ b/src/components/getData/Card.css
@@ -49,3 +49,27 @@
     font-weight: 500;
     font-size: large;
 }
+.delivery-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /*border: 1px solid var(--primary-color);*/
+    background-color: rgba(255,255,255, 0.08);
+    padding: 1rem 0.7rem;
+    margin: 13px 10px;
+    position: relative;
+    border-radius: 8px;
+    width: 40vw;
+}
+.pickup-card {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    /*border: 1px solid var(--primary-color);*/
+    background-color: rgba(255,255,255, 0.08);
+    padding: 1rem 0.7rem;
+    margin: 13px 10px;
+    position: relative;
+    border-radius: 8px;
+    width: 40vw;
+}
