--- a/src/components/getData/recieveData.css
+++ b/src/components/getData/recieveData.css
@@ -73,6 +73,13 @@
     border-radius: 5px;
     border:none;
 }
+.recieve-filter-response {
+    color: rgba(0,0,0,0.6);
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    margin: 70px 0 0 330px;
+}
 /*.pagination a {*/
 /*    background-color: #3f5955;*/
 /*    color: black;*/
