--- a/src/components/User/MainUserPanel.css
+++ b/src/components/User/MainUserPanel.css
@@ -80,16 +80,33 @@
     margin-top: 30px;
     color: rgba(0,0,0,0.65);
 }
+.image-wrapper {
+    display: flex;
+    justify-content: right;
+}
 .main-content {
     display: flex;
     align-items: center;
+}
+.main-content-delivery {
+    width: 450px;
+    height: 420px;
+}
+.K {
+    width: 100%;
+    height: 100%;
 }
 .P {
     padding-top: 40px;
     width: 100%;
     height: 100%;
     margin-top: -100px;
-
+}
+.A {
+    padding-top: 40px;
+    width: 80%;
+    height: 80%;
+    margin-top: -100px;
 }
 .top-button-content {
     grid-area: buttons;
