--- a/src/components/deliver/MainDeliverPanel.css
+++ b/src/components/deliver/MainDeliverPanel.css
@@ -3,6 +3,7 @@
     height: 100vh;
     display: grid;
     grid-template-areas: "title" "main" "footer";
+
 }
 .greetings-with-logo {
     grid-area: title;
@@ -43,6 +44,7 @@
 .delivery-site-wrapper {
     grid-area: main;
     height: 85vh;
+    overflow: hidden;
 }
 .box-wrapper {
     display: flex;
@@ -85,6 +87,7 @@
     width: 100%;
     text-align: center;
     color: rgba(0,0,0,0.65);
+    padding-bottom: 10px;
 }
 .footer h1{
     font-family: 'Montserrat', sans-serif;
